--- a/CellularAutomaton.Web/Views/Home/Index.cshtml
+++ b/CellularAutomaton.Web/Views/Home/Index.cshtml
@@ -5,12 +5,11 @@
 <link rel="stylesheet" href="~/css/MainPage.css" />
 
 <div class="text-center w-100" style="height: calc(100vh - 3em); background: black;">
-    <h1 class="text-center position-absolute text-white" style="font-size: 3em; z-index: 100; top: 15%; left: 50%; transform: translate(-50%, -50%)">
+    <h1 class="text-center position-absolute text-white" style="font-family: Arial, Helvetica, sans-serif; font-size: 5em; z-index: 100; top: 15%; left: 50%; transform: translate(-50%, -50%)">
         Приложения на клетъчните автомати
     </h1>
     
     <div class="w-100 h-100 p-0 m-0" style=" filter: brightness(80%); " id="background-canvas-simulation-holder">
-       
     </div>
 </div>
 
@@ -21,11 +20,27 @@
         </h2>
         <hr />
         <p>
-            Клетъчните автомати са математически модели, състоящи се от решетка от 
-            клетки, всяка от които може да приема крайно множество състояния. Еволюцията 
-            на клетките се определя от предварително зададени правила, които обикновено 
-            зависят от състоянието на съседните клетки. Тези системи се развиват в дискретни 
-            времеви стъпки и могат да демонстрират сложни поведения, въпреки простите си правила. 
+            Клетъчните автомати представляват математически модели, които се основават на 
+            решетка от клетки, като всяка отделна клетка може да приема едно от предварително 
+            дефинирано крайно множество състояния. Всяко от тези състояния определя текущото 
+            състояние на клетката в даден момент от времето. Еволюцията на системата, съставена 
+            от тези клетки, протича в съответствие с определени правила, които предварително 
+            са зададени и които определят начина, по който клетките ще променят своето състояние 
+            във времето.
+            Обикновено тези правила зависят не само от самата клетка, но и от състоянията на 
+            клетките, които я заобикалят в решетката. Така всяка клетка не функционира изолирано, 
+            а взаимодейства със своите съседи, като взема под внимание тяхното състояние, за да 
+            определи как ще се промени в следващата времева стъпка. Целият процес на развитие на 
+            клетъчния автомат протича в отделни, дискретни времеви стъпки, при които всички клетки 
+            в решетката едновременно актуализират своето състояние според определените правила.
+            Въпреки че правилата, които управляват поведението на клетъчните автомати, 
+            обикновено са сравнително прости и лесни за описание, те могат да доведат до 
+            изключително сложни и понякога дори неочаквани форми на поведение. Тези модели 
+            са способни да генерират структури, които наподобяват самоорганизиращи се системи, 
+            а в някои случаи могат дори да демонстрират свойства, характерни за изчислителните 
+            процеси. Тази способност на клетъчните автомати да възпроизвеждат сложни явления с 
+            помощта на относително прости правила ги прави обект на интерес в различни научни 
+            области, включително математиката, информатиката, физиката и биологията.
         </p>
     </div class="w-100 h-100">
 </section>
@@ -70,7 +85,6 @@
 
 <section>
     <div class="col-md-6  col-sm-12" id="canvas-simulation-h-holder"></div>
-
 </section>
 <script>
     function createCanvas(containerId) {
@@ -98,8 +112,8 @@
         let cellSizeX = canvas.width / config.cols;
         let cellSizeY = canvas.width / config.cols;
 
-        if ((window.screen.width / window.screen.height) < 0.5) {
-            cellSizeX = canvas.height / config.rows
+        if ((window.screen.width / window.screen.height) < 1) {
+            cellSizeX =  canvas.height / config.rows
             cellSizeY = canvas.height / config.rows
         }
 
