Add algorithm to store and fetch frames

--- a/CellularAutomaton.Web/Views/Home/Index.cshtml
+++ b/CellularAutomaton.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<section class="container d-flex w-100 h-100 min-vh-100 mt-3 flex-sm-row flex-column">
+<section class="container d-flex w-100 h-100 min-vh-100 mt-3 flex-sm-row flex-column mt-5">
     <div class="col-md-6 col-sm-12 d-flex flex-column h-100 align-content-center justify-content-center">
         <h2 class="text-center">
             Какво представляват клетъчните автомати?
@@ -48,15 +48,23 @@
 <section class="container d-flex w-100 h-100 min-vh-100 mt-3 flex-sm-row flex-column flex-md-row-reverse">
     <div class="col-md-6 col-sm-12 d-flex flex-column h-100 align-content-center justify-content-center">
         <h2 class="text-center">
-            Какво представляват клетъчните автомати?
+            История на клетъчните автомати
         </h2>
         <hr />
         <p>
-            Клетъчните автомати са математически модели, състоящи се от решетка от 
-            клетки, всяка от които може да приема крайно множество състояния. Еволюцията 
-            на клетките се определя от предварително зададени правила, които обикновено 
-            зависят от състоянието на съседните клетки. Тези системи се развиват в дискретни 
-            времеви стъпки и могат да демонстрират сложни поведения, въпреки простите си правила. 
+            Историята на клетъчните автомати започва през 40-те години на XX век, 
+            когато унгарският математик Джон фон Нойман, заедно със Станислав Улам, 
+            изучава механизми за самовъзпроизвеждащи се системи. Те разработват първите 
+            модели на КА, които могат да симулират сложни биологични и физически процеси.
+            През 70-те години КА стават популярни благодарение на „Играта на живота“ на Джон 
+            Конуей – двуизмерен клетъчен автомат, който демонстрира как прости правила могат 
+            да доведат до сложни, непредсказуеми поведения. По-късно, през 80-те години, 
+            Стивън Волфрам провежда обширни изследвания върху едномерните клетъчни автомати 
+            и доказва тяхната връзка с теорията на изчислимостта и хаоса.
+            Днес клетъчните автомати намират приложение в различни области като 
+            криптография, моделиране на физични системи, биология и дори изкуствен 
+            интелект. Тяхната простота и способност да симулират сложни явления ги 
+            правят важен инструмент в съвременната наука. 
         </p>
     </div class="w-100 h-100">
     <div class=""></div>
@@ -65,21 +73,21 @@
 <section class="container d-flex w-100 h-100 min-vh-100 mt-3 flex-sm-row flex-column">
     <div class="col-md-6 col-sm-12 d-flex flex-column h-100 align-content-center justify-content-center">
         <h2 class="text-center">
-            Какво представляват клетъчните автомати?
+            Приложения
         </h2>
         <hr />
         <p>
-            Клетъчните автомати са математически модели, състоящи се от решетка от 
-            клетки, всяка от които може да приема крайно множество състояния. Еволюцията 
-            на клетките се определя от предварително зададени правила, които обикновено 
-            зависят от състоянието на съседните клетки. Тези системи се развиват в дискретни 
-            времеви стъпки и могат да демонстрират сложни поведения, въпреки простите си правила. 
+            Клетъчните автомати намират приложение в различни научни и технологични области. 
+            Във физиката се използват за симулиране на флуиди, фазови преходи и термодинамични 
+            процеси. В биологията помагат за моделиране на растежа на тумори, разпространението 
+            на болести и взаимодействията в екосистемите. В криптографията се прилагат за генериране 
+            на псевдослучайни числа и сигурни алгоритми. В компютърните науки те са свързани с теорията 
+            на изчислимостта и могат да действат като универсални изчислителни системи. Освен това, 
+            намират място в компютърната графика, градоустройството и дигиталното изкуство.
         </p>
     </div>
     <div class="col-md-6 col-sm-12 appear-left">
-
-
-
+       
     </div>
 </section>
 
