--- a/CellularAutomaton.Web/Views/Home/PredictionModel.cshtml
+++ b/CellularAutomaton.Web/Views/Home/PredictionModel.cshtml
@@ -11,15 +11,15 @@
 		justify-content: space-between;
 	}
 
-		.btnContainer button {
-			flex-grow: 1;
-			width: 15rem;
-		}
+	.btnContainer button {
+		flex-grow: 1;
+		width: 15rem;
+	}
 
-		.btnContainer span {
-			flex-grow: 1;
-			width: 15rem;
-		}
+	.btnContainer span {
+		flex-grow: 1;
+		width: 15rem;
+	}
 
 	#controlContainer button {
 		width: 7rem;
@@ -326,8 +326,8 @@
 			};
 
 			setTimeout(() => {
-				canvasWidth = canvas.getBoundingClientRect().width;
-				canvasHeight = canvas.getBoundingClientRect().height;
+				canvasWidth = canvas.width;
+				canvasHeight = canvas.height;
 				document.getElementById("canWidth").value = canvasWidth;
 				document.getElementById("canHeight").value = canvasHeight;
 			}, 500);
