--- a/CellularAutomaton.Web/Views/Shared/_Layout.cshtml
+++ b/CellularAutomaton.Web/Views/Shared/_Layout.cshtml
@@ -19,11 +19,11 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Начало</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="PredictionModel">Fire Model</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="PredictionModel">Модел на разпространение на пожари</a>
                         </li>
                     </ul>
                 </div>
