--- a/CellularAutomaton.Web/Views/Home/Index.cshtml
+++ b/CellularAutomaton.Web/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
         </h2>
         <hr />
         <p>
-           
+           С промените в климата все по-често ставаме свидетели на природни бедствия. Повишаването на температурите създава предпоставка за възпламеняване на местностите със суха растителност. Огънят се разраства интензивно и за кратко време обхваща значителна площ, унищожавайки дървесни масиви, формирани с десетилетия. Затова е важно да познаваме природата на пожарите и условията за тяхното възникване и разпространение.
         </p>
     </div>
     <div class="d-flex justify-content-center align-items-start"  >
